@@ -14,6 +14,7 @@ def CATEGORIES():
     shows[__language__(30006)] = {
         'feed': 'http://feeds2.feedburner.com/AllJupiterVideos?format=xml',
         'feed-low': 'http://feeds2.feedburner.com/AllJupiterVideos?format=xml',
+        'feed-audio': 'http://feeds2.feedburner.com/AllJupiterBroadcastingShowsOgg?format=xml',
         'image': 'http://images2.wikia.nocookie.net/__cb20110118004527/jupiterbroadcasting/images/2/24/JupiterBadgeGeneric.jpg',
         'plot': __language__(30206),
         'genre': 'Technology'
@@ -23,6 +24,7 @@ def CATEGORIES():
     shows[__language__(30000)] = {
         'feed': 'http://feeds.feedburner.com/computeractionshowvideo',
         'feed-low': 'http://feeds.feedburner.com/linuxactionshowipodvid?format=xml',
+        'feed-audio': 'http://feeds2.feedburner.com/TheLinuxActionShowOGG?format=xml',
         'image': 'http://www.jupiterbroadcasting.com/images/LAS-VIDEO.jpg',
         'plot': __language__(30200),
         'genre': 'Technology'
@@ -32,6 +34,7 @@ def CATEGORIES():
     shows[__language__(30002)] = {
         'feed': 'http://feeds.feedburner.com/stokedhd?format=xml',
         'feed-low': 'http://feeds.feedburner.com/stokedipod?format=xml',
+        'feed-audio': 'http://feeds.feedburner.com/stoked-ogg?format=xml',
         'image': 'http://www.jupiterbroadcasting.com/images/STOked-BadgeHD.png',
         'plot': __language__(30202),
         'genre': 'Technology'
@@ -41,6 +44,7 @@ def CATEGORIES():
     shows[__language__(30008)] = {
         'feed': 'http://feeds.feedburner.com/techsnaphd?format=xml',
         'feed-low': 'http://feeds.feedburner.com/techsnapmobile?format=xml',
+        'feed-audio': 'http://feeds.feedburner.com/techsnapogg?format=xml',
         'image': 'http://images3.wikia.nocookie.net/jupiterbroadcasting/images/d/d6/Techsnapcenter.jpg',
         'plot': __language__(30208),
         'genre': 'Technology'
@@ -50,6 +54,7 @@ def CATEGORIES():
     shows[__language__(30009)] = {
         'feed': 'http://feeds.feedburner.com/scibytehd?format=xml',
         'feed-low': 'http://feeds.feedburner.com/scibytemobile?format=xml',
+        'feed-audio': 'http://feeds.feedburner.com/scibyteaudio?format=xml',
         'image': 'http://www.jupiterbroadcasting.com/images/SciByteBadgeHD.jpg',
         'plot': __language__(30209),
         'genre': 'Science'
@@ -59,6 +64,7 @@ def CATEGORIES():
     shows[__language__(30014)] = {
         'feed': 'http://www.jupiterbroadcasting.com/feeds/indepthlookihd.xml',
         'feed-low': 'http://www.jupiterbroadcasting.com/feeds/indepthlookmob.xml',
+        'feed-audio': 'http://www.jupiterbroadcasting.com/feeds/indepthlookmp3.xml?format=xml',
         'image': 'http://images4.wikia.nocookie.net/jupiterbroadcasting/images/3/33/Indepthlook.jpg',
         'plot': __language__(30214),
         'genre': 'Technology'
@@ -68,6 +74,7 @@ def CATEGORIES():
     shows[__language__(30016)] = {
         'feed': 'http://www.jupiterbroadcasting.com/feeds/unfilterHD.xml',
         'feed-low': 'http://www.jupiterbroadcasting.com/feeds/unfilterMob.xml',
+        'feed-audio': 'http://www.jupiterbroadcasting.com/feeds/unfilterogg.xml',
         'image': 'http://www.jupiterbroadcasting.com/images/itunes-badge.jpg',
         'plot': __language__(30216),
         'genre': 'Technology'
@@ -76,7 +83,8 @@ def CATEGORIES():
     # FauxShow
     shows[__language__(30011)] = {
         'feed': 'http://www.jupiterbroadcasting.com/feeds/FauxShowHD.xml',
-        'feed-low': 'http://www.jupiterbroadcasting.com/feeds/FauxShowMobile.xml',
+        'feed-low': 'http://feeds.feedburner.com/jupiternitelargevid?format=xml',
+        'feed-audio': 'http://feeds.feedburner.com/jupiternitemp3?format=xml',
         'image': 'http://www.jupiterbroadcasting.com/images/FauxShowStillcrop600.jpg',
         'plot': __language__(30211),
         'genre': 'Comedy'
@@ -95,6 +103,7 @@ def CATEGORIES():
     shows[__language__(30007)] = {
         'feed': 'http://feeds.feedburner.com/MMOrgueHD?format=xml',
         'feed-low': 'http://feeds.feedburner.com/MMOrgueHD?format=xml',
+        'feed-audio': 'http://www.jupiterbroadcasting.com/feeds/AllJupiterBroadcastingShowsOGG.xml',
         'image': 'http://www.jupiterbroadcasting.com/images/MMOrgueBadgeHD144.jpg',
         'plot': __language__(30207),
         'genre': 'Technology'
@@ -104,6 +113,7 @@ def CATEGORIES():
     shows[__language__(30003)] = {
         'feed': 'http://feeds.feedburner.com/lotsovideo?format=xml',
         'feed-low': 'http://feeds.feedburner.com/lotsovideo?format=xml',
+        'feed-audio': 'http://feeds.feedburner.com/lotsomp3?format=xml',
         'image': 'http://www.jupiterbroadcasting.com/images/LOTSOiTunesVideo144.jpg',
         'plot': __language__(30203),
         'genre': 'Technology'
@@ -112,7 +122,8 @@ def CATEGORIES():
     # Beer is Tasty
     shows[__language__(30001)] = {
         'feed': 'http://feeds2.feedburner.com/jupiterbeeristasty-hd?format=xml',
-        'feed-low': 'http://feeds2.feedburner.com/jupiterbeeristasty-hd?format=xml',
+        'feed-low': 'http://feeds2.feedburner.com/BeerIsTasty?format=xml',
+        'feed-audio': 'http://feeds2.feedburner.com/BeerIsTasty?format=xml',
         'image': 'http://www.jupiterbroadcasting.com/images/beeristasty/BeerisTasty-iTunesBadgeHD.png',
         'plot': __language__(30201),
         'genre': 'Technology'
@@ -122,6 +133,7 @@ def CATEGORIES():
     shows[__language__(30005)] = {
         'feed': 'http://feeds.feedburner.com/ldf-video?format=xml',
         'feed-low': 'http://feeds.feedburner.com/ldf-video?format=xml',
+        'feed-audio': 'http://feeds.feedburner.com/ldf-mp3?format=xml',
         'image': 'http://www.jupiterbroadcasting.com/images/LDF-FullStill144x139.jpg',
         'plot': __language__(30205),
         'genre': 'Technology'
@@ -131,6 +143,7 @@ def CATEGORIES():
     shows[__language__(30015)] = {
         'feed': 'http://feeds.feedburner.com/TorkedHd?format=xml',
         'feed-low': 'http://feeds.feedburner.com/TorkedMobile?format=xml',
+        'feed-audio': 'http://feeds.feedburner.com/TorkedMp3?format=xml',
         'image': 'http://images3.wikia.nocookie.net/jupiterbroadcasting/images/e/ea/Torked.jpg',
         'plot': __language__(30215),
         'genre': 'Technology'
@@ -140,6 +153,7 @@ def CATEGORIES():
     shows[__language__(30017)] = {
         'feed': 'http://feeds.feedburner.com/coderradiovideo?format=xml',
         'feed-low': 'http://www.jupiterbroadcasting.com/feeds/coderradioogg.xml?format=xml',
+        'feed-audio': 'http://www.jupiterbroadcasting.com/feeds/coderradioogg.xml',
         'image': 'http://www.jupiterbroadcasting.com/images/CR-rssBadge.jpg',
         'plot': __language__(30217),
         'genre': 'Technology'
@@ -149,6 +163,7 @@ def CATEGORIES():
     shows[__language__(30018)] = {
         'feed': 'http://feeds.feedburner.com/PlanBVideo?format=xml',
         'feed-low': 'http://feeds.feedburner.com/planbogg?format=xml',
+        'feed-audio': 'http://feeds.feedburner.com/planbogg?format=xml',
         'image': 'http://www.jupiterbroadcasting.com/images/planb-badge.jpg',
         'plot': __language__(30218),
         'genre': 'Technology'
@@ -158,6 +173,8 @@ def CATEGORIES():
     liveUrl = 'http://videocdn-us.geocdn.scaleengine.net/jblive-iphone/live/jblive.stream/playlist.m3u8'
     if (quality == 1):
         liveUrl = 'rtsp://videocdn-us.geocdn.scaleengine.net/jblive/live/jblive.stream'
+    elif (quality == 2):
+        liveUrl = 'http://jblive.am'
     addLink(__language__(30010), liveUrl, '', 'http://images2.wikia.nocookie.net/__cb20110118004527/jupiterbroadcasting/images/2/24/JupiterBadgeGeneric.jpg', {
         'title': __language__(30010),
         'plot': __language__(30210),
@@ -174,6 +191,8 @@ def CATEGORIES():
         feed = data['feed'] # High by default.
         if (quality == 1):
             feed = data['feed-low']
+        elif (quality == 2):
+            feed = data['feed-audio']
         addDir(name, feed, 1, data['image'], data)
 
 def INDEX(name, url):
