@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
-	<!-- General -->
-	<category label="30100">
-	  <!-- Video Quality: High (0) / Low (1) -->
-		<setting id="video_quality" type="enum" label="30101" lvalues="30102|30103" default="0" />
-	</category>
+        <!-- General -->
+        <category label="30100">
+          <!-- Video Quality: High (0) / Low (1) -->
+                <setting id="video_quality" type="enum" label="30101" lvalues="30102|30103|30105" default="0" />
+        </category>
 </settings>
